# hermes

./: .clangd  .gitignore  Cargo.toml  Makefile  main.c
api/: basic.rs  request.rs  verify.rs
api/apps/: create.rs  get.rs
api/auth/: request.rs  verify.rs
app/: package.json  pnpm-lock.yaml
app/.svelte-kit/: ambient.d.ts
app/.svelte-kit/types/: route_meta_data.json
app/.svelte-kit/types/src/routes/api/v1/request/: $types.d.ts
app/src/: app.html
app/src/components/: LoadingIcon.svelte
app/src/lib/: sql.ts  utils.ts
app/src/lib/db/migrations/: 001.sql
app/src/lib/server/: index.ts
app/src/lib/store/: index.ts
app/src/routes/: +layout.svelte  +page.svelte
app/src/routes/api/v1/apps/: +server.ts
app/src/routes/api/v1/authenticate/: +server.ts
app/src/routes/api/v1/profile/: +server.ts
app/src/routes/api/v1/request/: +server.ts
app/src/routes/api/v1/verify/: +server.ts
app/src/routes/apps/: +page.svelte
app/src/routes/profile/: +page.svelte
node/: package.json  pnpm-lock.yaml
node/src/: server.ts
node/src/api/: auth_middlewares.ts  router.ts  services.ts
node/src/db/: index.ts
node/src/db/migrations/001/: up.sql
node/src/db/migrations/002/: up.sql
node/src/db/migrations/003/: up.sql
node/src/services/Authentication/: Service.ts  router.ts
node/src/services/apps/: router.ts  service.ts
node/src/services/authentication/: Service.ts  router.ts
node/src/utils/: index.ts
src/: main.rs
src-rs/: lib.rs  pg.rs  redis.rs
src/services/: Auth.rs  apps.rs  auth.rs  codes.rs  mod.rs
src/sql/: schemav1.sql
src/utils/: mod.rs  redis.rs
