[package]
name = "hermes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "postgres"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
lettre = "0.10.4"
rand = "0.8.5"
